# laser-polio

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README_old.rst  TODO.md  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py  tox.ini
.devcontainer/: devcontainer.json  postCreateCommands.sh
.github/workflows/: build-wheel.yml  github-actions.yml  manual-version-bump.yml
CALIB/: Dockerfile  create_study.py  demo_nigeria.py  demo_zamfara.py  make_synthetic_data_zamfara.py  mysql_storage.py  objective.py  run_calib_workers.py  worker.py
CALIB/cluster/: README.md  laser-job-deploy-manifests.yaml  laser-study-creator-deploy-manifests.yaml  laser-worker-deploy-manifests.yaml  laser-worker-highcpu-deploy-manifests.yaml  mysql.yaml  postgres.yaml  requirements.txt
calib/: .dockerignore  Dockerfile  README.txt  calib_db.py  calib_report.py  calibrate.py  demo_nigeria.py  demo_zamfara.py  find_n_nigeria_nodes.py  get_lp_module_versions.py  laser.py  logic.py  objective.py  report.py  requirements.txt  run_calib_docker_local.py  scoring.py  setup_sim.py  targets.py  worker.py
calib/archive/: calibrate.py  logic.py  run_zamfara.bat  setup_sim.py
calib/calib_configs/: calib_pars_r0.yaml  doy_amp_bymonth.yaml  doy_amp_bymonth_bytimeseries.yaml  doy_bymonth.yaml  doy_bymonth_bytimeseries.yaml  nigeria_synth.yaml  r0.yaml  r0_gravk_mmf.yaml  r0_k.yaml  r0_k_seasonality.yaml  r0_k_ssn.yaml  r0_k_ssn_background_seeding.yaml  r0_k_ssn_gravity.yaml  r0_k_ssn_gravity_zinb.yaml  r0_k_ssn_gravity_zinb_hetero.yaml  r0_k_ssn_gravity_zinb_initimmunscalar.yaml  r0_k_ssn_gravitykabc_zinb.yaml  r0_k_ssn_gravitykabc_zinb_hetero.yaml  r0_k_ssn_gravitykabc_zinb_r0wtscalars.yaml  r0_k_ssn_gravitykabc_zinb_r0wtscalars_immunscalars.yaml  r0_k_ssn_hetero.yaml  r0_k_ssn_period.yaml  r0_k_ssn_wts.yaml  r0_k_ssn_wts_maxmigrfrac.yaml  r0_k_ssn_wts_maxmigrfrac_lowerr0.yaml  r0_k_ssn_wts_maxmigrfrac_lowerr0_zi.yaml  r0_k_ssnamp_wts_maxmigrfrac.yaml  r0_radk_mmf.yaml  r0_ssn_gravkabc_zinb_r0sclrs_siasclrs_initimmunsclrs.yaml  r0_ssn_gravkabc_zinb_r0sclrs_siasclrs_initimmunsclrs_dirichlet.yaml  r0_ssn_gravkabc_zinb_r0sclrs_siasclrs_initimmunsclrs_dirichlet_wts.yaml  r0_ssn_gravkabc_zinb_r0sclrs_siasclrs_initimmunsclrs_dirichlet_wts_narrower.yaml  r0_ssn_gravkabc_zinb_r0sclrs_siasclrs_initimmunsclrs_dirichlet_wts_narrower_regionaltimeseries.yaml  r0_ssn_gravkabc_zinb_r0sclrs_siasclrs_initimmunsclrs_dirichlet_wts_nsnga.yaml  r0_ssn_rad_zinb_r0sclrs_siasclrs_initimmunsclrs_dirichlet_wts_narrower_regionaltimeseries.yaml  ssnamp.yaml  synthetic_calib_config.yaml  synthetic_calib_doy.yaml
calib/calib_params/: calib_better.yaml  calib_good.yaml  calib_trythis.yaml
calib/cloud/: build_and_push.py  build_init_pop.py  check_study.sh  cloud_calib_config.py  create_study.py  kubeutil.py  laser-job-deploy-manifests.yaml  laser-study-creator-deploy-manifests.yaml  laser-worker-deploy-manifests.yaml  laser-worker-highcpu-deploy-manifests.yaml  report_calib_aks.py  run_best_trial.py  run_calib_workers.py  run_dashboard.py  run_report_aks.py  run_report_aks_sweep.py  run_report_aks_sweep_single_par.py  run_report_aks_trial.py  run_sim_with_best_pars.py
calib/comps/: laser.id
calib/configs/: config_base_avaria.yaml  config_base_eredion.yaml  config_base_wakanda.yaml
calib/data/: seir_counts_r0_200.csv
calib/model_configs/: config_benin_togo_7y_2017.yaml  config_jigawa.yaml  config_jigawa_6y.yaml  config_kano_jigawa.yaml  config_kano_jigawa_ipv.yaml  config_nigeria.yaml  config_nigeria_2y.yaml  config_nigeria_3y_2018_pim_gravity_zinb_ipv.yaml  config_nigeria_3y_2018_underwt_gravity_zinb_ipv.yaml  config_nigeria_3y_seed_2018.yaml  config_nigeria_3y_underwt_gravity_2018.yaml  config_nigeria_4y_2020_pim_gravity_zinb.yaml  config_nigeria_4y_seed_2020.yaml  config_nigeria_6y.yaml  config_nigeria_6y_2018_underwt_gravity_zinb_ipv_moreseeds_alt.yaml  config_nigeria_6y_2018_underwt_gravity_zinb_ipv_moreseeds_alt_zerovxtrans.yaml  config_nigeria_6y_2018_underwt_gravity_zinb_ipv_moreseeds_immunadj.yaml  config_nigeria_6y_2018_underwt_gravity_zinb_ipv_nsnga.yaml  config_nigeria_6y_2018_underwt_gravity_zinb_ipv_nwecnga_3periods.yaml  config_nigeria_6y_2018_underwt_gravity_zinb_ipv_nwecnga_3periods_pop0.01.yaml  config_nigeria_6y_init_pop_missed_pop.yaml  config_nigeria_6y_load_init_pop.yaml  config_nigeria_6y_pim_background_seeding.yaml  config_nigeria_6y_pim_r0_scalars.yaml  config_nigeria_6y_underwt.yaml  config_nigeria_6y_underwt_gravity.yaml  config_nigeria_7y_2017_adm01_groupings.yaml  config_nigeria_7y_2017_adm01_sansmaxmigrfrac.yaml  config_nigeria_7y_2017_region_groupings.yaml  config_nigeria_7y_2017_region_r0_spd_radk_mmf.yaml  config_nigeria_popscale0.0001.yaml  (+20 more)
ci/: bootstrap.py  requirements.txt
data/: README.md  age_africa.csv  cbr_NGA.json  regions.yaml  shp_names_africa_adm2.csv  sia_scenario_1.csv  synth_data_nigeria_r014_k0.5.h5
data_curation_scripts/: compile_curated_data.py
docs/: authors.rst  changelog.rst  conf.py  contributing.rst  installation.rst  readme.rst  usage.rst
examples/: demo_africa.py  demo_agent_based_seir.py  demo_nigeria.py  demo_nigeria_best_calib.py  demo_sweep_r0.py  demo_west_africa.py  demo_zamfara.py  demo_zamfara_background_seeding.py  demo_zamfara_gravity.py  demo_zamfara_load_init_pop.py
scripts/: generate_nigeria_regional_map.py
tests/: test_calibrate.py  test_cli.py  test_diseasestate_abm.py  test_init_pop.py  test_interventions.py  test_migration.py  test_model_class.py  test_polio.py  test_prng_seeding.py  test_report_saving.py  test_seasonality.py  test_seeding.py  test_seir_abm_init.py  test_squashing.py  test_states_transitions.py  test_strain_transmission.py  test_timers.py  test_transmission.py  test_utils.py  test_vital_dynamics.py
tests_scientific/: individual_heterogeneity.py  outbreak_size.py  rand_seed.py  seasonality.py  sweep_seasonal_amp_doy_r0_nigeria_7y.py  sweep_seasonal_amp_doy_zamfara_1y.py  sweep_seasonal_amp_sia_nga_7y.py
(+191 files in other folders)
